# dumb_os

./: Cargo.toml  Makefile  README.md
builder/: Cargo.toml
builder/src/: main.rs
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: error.rs  gdt.rs  lib.rs  main.rs  memory.rs  memory_manager.rs  pit.rs  prelude.rs  qemu.rs  uart.rs  vga_buffer.rs
kernel/src/acpi/: mod.rs  tables.rs
kernel/src/allocator/: dummy.rs  epsilon.rs  mod.rs
kernel/src/disk/: ata.rs  mod.rs
kernel/src/io/: chain.rs  copy.rs  cursor.rs  empty.rs  error.rs  mod.rs  prelude.rs  read.rs  seek.rs  take.rs  write.rs
kernel/src/io/buffered/: buf_read.rs  buf_reader.rs  buf_writer.rs  line_writer.rs  mod.rs
kernel/src/io/stdio/: mod.rs
kernel/src/irq/: apic.rs  mod.rs  pic_8256.rs
kernel/src/pci/: mod.rs  vendor.rs
kernel/src/tasks/: executor.rs  keyboard.rs  mod.rs  mpsc.rs  timer.rs
kernel/tests/: should_panic.rs  stack_overflow.rs
runner/: Cargo.toml
runner/src/: main.rs
src/: allocator.rs  apic.rs  gdt.rs  irq.rs  lib.rs  main.rs  memory.rs  panic.rs  prelude.rs  qemu.rs  serial.rs  sync.rs  vga_buffer.rs
src/allocator/: dummy.rs  epsilon.rs  mod.rs
src/disk/: ata.rs
src/irq/: mod.rs  pic_8256.rs
src/tasks/: executor.rs  keyboard.rs  mod.rs  timer.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
