[package]
name = "dumb_os"
version = "0.1.0"
authors = ["Triss Healy <trissylegs@gmail.com>"]
edition = "2018"

[features]
default = ["linked_list_allocator"]
epsilon_allocator = []

[package.metadata.bootloader]
map-physical-memory = true
physical-memory-offset = "0x0000_4000_0000_0000"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
run-args = [
    "-machine", "pc",
    "-serial", "stdio"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300

[dependencies]

gimli = { version = "0.23", default-features = false, features = [] }
bitflags = "1.2"
bootloader = { version = "0.10.1", features = [] }
byteorder = { version = "1.4", default-features = false, features = ["i128"] }
conquer-once = { version = "0.3.2", default-features = false }
crossbeam = { version = "0.8", default-features = false, features = ["alloc"] }
field-offset = "0.3"
futures = { version = "0.3", default-features = false, features = ["async-await", "alloc"] }
lazy_static = { version = "1.0", features = ["spin_no_std"]}
linked_list_allocator = { version = "0.8.11", optional = true }
pc-keyboard = "0.5.0"
pic8259_simple = "0.2"
rand = { version = "0.8", default-features = false }
rand_pcg = "0.3"
smallvec = { version = "1.6", default-features = false, features = [ "const_generics" ] }
spin = "0.5.2"
ux = { version = "0.1", default-features = false }
volatile = "0.2"
x86_64 = "0.14.0"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
