[package]
name = "dumb-os-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bootloader-locator = "0.0.4"
envy = "0.4.2"
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
semver = { version = "0.11", features = ["serde"] }
tokio = { version = "1", features = ["full"] }